POM (xml): + updated version of junt - from 4 to 5 - and added jvm options to clean up the console after test from warning